# awesome-monitoring

./: .gitmodules  AUTHORS.md  CNAME  CONTRIBUTING.md  README.md
grafana/: Linux-1541133832862.json  Linux-1541221774005.json  Linux.json  Logs.json  Mongo.json  Mssql.json  Python Log-1541221807572.json  Python Logs-1541065598310.json  PythonLog.json  RabbitMQ-Overview.json  Rabbitmq-1541063736362.json  Rabbitmq-1541221761405.json  Rabbitmq.json  Redis-1541063881914.json  Redis.json  SqlServer.json  System-1541063678228.json  Windows.json
kapacitor/: actRedisAlert.tick  capLog.tick  capPort.tick  capProcess.tick  connRedisAlert.tick  consumerMQAlert.tick  cpu.tick  cpuAlert.tick  databaseActivity.tick  databaseFailure.tick  databaseLoad.tick  disk.tick  diskAlert.tick  diskio.tick  diskioAlert.tick  memAlert.tick  memory.tick  network.tick  networkAlert.tick  nodeMQAlert.tick  rabbitmqConsumer.tick  rabbitmqNode.tick  redisActivity.tick  redisConnection.tick  swap.tick  swapAlert.tick  system.tick  systemAlert.tick
nagios/plugins/nscp-plugins-windows/nscp-official/: check_battery.vbs  check_files.vbs  check_ok.bat  check_printer.vbs  check_test.bat  check_test.vbs  check_updates.vbs  powershell.ps1
nagios/plugins/snmp-plugins-c/: AUTHORS  Makefile.in  config.h.in
nagios/plugins/snmp-plugins-c/autom4te.cache/: output.1
nagios/plugins/snmp-plugins-c/po/: ChangeLog  Makevars  (+1 more)
nagios/plugins/snmp-plugins-c/src/: Makefile.am  Makefile.in  nagios_common_snmp.c
nagios/plugins/snmp-plugins-c/src/autom4te.cache/: requests
nagios/plugins/snmp-plugins-perl/: Changelog  check_snmp_process.pl  check_snmp_storage.pl  check_snmp_vrrp.pl  install.sh
plugins/nscp-plugins-windows/: README.md
plugins/nscp-plugins-windows/check_files/: check_MostRecentFile.vbs  check_files.vbs  check_filesize_r.vbs  check_new_files.vbs
plugins/nscp-plugins-windows/nscp-official/: check_60s.bat  check_long.bat  check_no_rdp.bat  check_ping.bat  check_test.ps1
plugins/snmp-plugins-c/: ChangeLog  INSTALL  Makefile.am  NEWS  README  configure  configure.in
plugins/snmp-plugins-c/autom4te.cache/: requests  traces.0  traces.1
plugins/snmp-plugins-c/m4/: ChangeLog
plugins/snmp-plugins-c/po/: LINGUAS  fr.gmo  fr.po  nagios-plugins-snmp.pot
plugins/snmp-plugins-c/src/: check_snmp_int.c  check_snmp_process.c  check_snmp_storage.c  nagios_common_snmp.h
plugins/snmp-plugins-c/src/autom4te.cache/: output.0  traces.0
plugins/snmp-plugins-perl/: README  check_snmp_boostedge.pl  check_snmp_cpfw.pl  check_snmp_css.pl  check_snmp_css_main.pl  check_snmp_env.pl  check_snmp_int.pl  check_snmp_linkproof_nhr.pl  check_snmp_load.pl  check_snmp_mem.pl  check_snmp_nsbox.pl  check_snmp_win.pl
plugins/snmp-plugins-perl/doc/: snmp_css.html  snmp_env.html  snmp_load.html  snmp_mem.html  snmp_process.html  snmp_windows.html
(+7 files in other folders)
